Bug 164237 - Comments Sidebar: "Options" not visible due to broken ellipsis when vcl:gen
Summary: Comments Sidebar: "Options" not visible due to broken ellipsis when vcl:gen
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mohit Marathe
URL:
Whiteboard: target:25.8.0
Keywords:
: 164578 (view as bug list)
Depends on:
Blocks: Sidebar-Comment
  Show dependency treegraph
 
Reported: 2024-12-08 06:22 UTC by Mohit Marathe
Modified: 2025-05-26 05:55 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
It shows the bug (175.77 KB, image/png)
2024-12-08 06:28 UTC, Mohit Marathe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mohit Marathe 2024-12-08 06:22:44 UTC
Description:
Cause: The ellipsis property for the gtk label is broken in generic backend which makes the width of the label (and hence the sidebar) too large. And due to how the "Options" part is aligned it goes out of the visible part of the sidebar. 

Steps to Reproduce:
1. Open a document in Writer.
2. Select a text that is larger than one line and add comment to it.

Actual Results:
The "Options" part is not visible in the comments sidebar.

Expected Results:
It should be visible


Reproducible: Always


User Profile Reset: No

Additional Info:
Comment 1 Mohit Marathe 2024-12-08 06:28:29 UTC
Created attachment 198005 [details]
It shows the bug
Comment 2 Commit Notification 2025-05-26 04:51:49 UTC
Mohit Marathe committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3f350a4c0f9a6dd7ee41bbc729d5b3180e21d730

tdf#164237 sw: set preferred width of the thread in comments sidebar

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Buovjaga 2025-05-26 05:55:32 UTC
*** Bug 164578 has been marked as a duplicate of this bug. ***