tdf#164237 sw: set preferred width of the thread in comments sidebar

Change-Id: I04f879df1b04813b12df1ccaab0e7926a49798f5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185749
Tested-by: Jenkins
Reviewed-by: Mohit Marathe <mohit.marathe.extern@allotropia.de>